--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch-css": "npx tailwindcss -i ./khmerasr/static/css/src/input.css -o ./khmerasr/static/css/dist/output.css --watch"
+    "watch-css": "npx tailwindcss -i ./src/static/src/style.css -o ./src/static/css/main.css --watch"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/rayranger/khmerasr#readme",
   "devDependencies": {
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.2.1"
   },
   "dependencies": {
     "tw-elements": "^1.0.0-alpha12"
